<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_activity_cart"
        android:icon="@drawable/toolbar_cart"
        android:orderInCategory="100"
        android:title="@string/action_activity_cart"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_activity_store_native"
        android:orderInCategory="100"
        android:title="@string/action_activity_store_native"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_activity_store_hybrid"
        android:orderInCategory="100"
        android:title="@string/action_activity_store_hybrid"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_activity_store_web"
        android:orderInCategory="100"
        android:title="@string/action_activity_store_web"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_debug_clear_cache"
        android:orderInCategory="100"
        android:title="@string/action_debug_clear_cache"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_debug_clear_picasso_cache"
        android:orderInCategory="100"
        android:title="@string/action_debug_clear_picasso_cache"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_debug_clear_cart"
        android:orderInCategory="100"
        android:title="@string/action_debug_clear_cart"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_debug_clear_addresses"
        android:orderInCategory="100"
        android:title="@string/action_debug_clear_addresses"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_activity_videos"
        android:orderInCategory="100"
        android:title="@string/action_activity_videos"
        app:showAsAction="never"/>
</menu>