<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/content_image_product"
        android:padding="@dimen/element_padding"
        tools:src="@drawable/placeholder169"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/element_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/placeholder_title_long"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="@string/placeholder_price"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_free_shipping"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/shipping"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    tools:text="Free Shipping"/>

                <TextView
                    android:id="@+id/product_stock"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    tools:text="In Stock"/>

                <TextView
                    android:id="@+id/product_part_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/medium_grey"
                    android:textSize="@dimen/text_tiny"
                    tools:text="Part: HK-S4-127H"/>
            </LinearLayout>

            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end|bottom"
                android:background="#0070FF"
                android:padding="@dimen/padding_small"
                android:text="@string/cta_add_to_cart"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>